[project]
name = "mount-serial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathvalidate>=3.2.3",
    "pyserial>=3.5",
    "stransi>=0.3.0",
    "strip-ansi>=0.1.1",
    "userspacefs>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff.format]
indent-style = "tab"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mount-serial = "mount_serial.__init__:main"
